Fix alignment issues on mobiles and refined code

--- a/app/style.css
+++ b/app/style.css
@@ -8,32 +8,37 @@
 html {
     background-color: black;
     text-align: center;
-    font-family: "Exo", monospace;
 }
 
 body {
-    height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    align-items: center;
+    font-family: "Exo", monospace;
+    animation: flicker 0.2s infinite;
     image-rendering: pixelated;
     /* Pixelated rendering */
+}
 
+html, body {
+    overflow: hidden;
 }
 
 /* Body styling to mimic a CRT terminal */
 main {
+    max-width: 95%;
+    margin: 0 auto;
     display: grid;
     color: #00FF00;
     text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00;
-    animation: flicker 0.2s infinite;
-    place-items: center;
-    gap: 30px;
-    margin-bottom: 30px;
-    max-height: 700px;
     grid-template-columns: 1fr;
+    align-items: center;
+    gap: 30px;
+    padding-bottom: 58px;
 }
+
 
 /* Flicker animation for a subtle CRT effect */
 @keyframes flicker {
@@ -71,15 +76,15 @@ body::before {
 }
 
 .choices {
+    height: 130px;
     display: flex;
     justify-content: center;
-    gap: 5%;
+    gap: 1%;
 }
 
-/* Styling the images */
 .choices img {
     width: 100%;
-    max-width: 150px;
+    max-width: 130px;
     cursor: pointer;
     transition: transform 0.5s;
     image-rendering: initial;
@@ -95,12 +100,6 @@ img:hover {
     font-size: 1.9rem;
     font-size: clamp(1.9rem, 1.221705426356589rem + 0.18087855297157623vw, 4rem);
     font-weight: 200;
-}
-
-/* Initial prompt and game updates */
-.fade-in-message {
-    opacity: 0;
-    animation: fadeInText 0.25s ease-in-out forwards, glowEffect 1.5s ease-in-out infinite alternate;
 }
 
 /* Fade-in animation (Choose your sign to start) */
@@ -124,6 +123,12 @@ img:hover {
     }
 }
 
+/* Initial prompt and game updates */
+.fade-in-message {
+    opacity: 0;
+    animation: fadeInText 0.25s ease-in-out forwards, glowEffect 1.5s ease-in-out infinite alternate;
+}
+
 #playAgainBtn,
 #playAgainBtn:after {
     width: 190px;
@@ -134,10 +139,6 @@ img:hover {
     letter-spacing: 3px;
     box-shadow: 6px 0px 0px #00FF00;
     outline: transparent;
-    position: relative;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -154,15 +155,12 @@ img:hover {
     --slice-3: inset(10% -6px 85% 0);
     --slice-4: inset(40% -6px 43% 0);
     --slice-5: inset(80% -6px 5% 0);
-
     content: 'PLAY AGAIN';
     display: flex;
     position: absolute;
     background: linear-gradient(45deg, transparent 3%, #00FF00 3%, #00FF00 5%, #175c17 5%);
     text-shadow: -3px -3px 0px #00FF00, 3px 3px 0px #00FF00;
     clip-path: var(--slice-0);
-    align-items: center;
-    justify-content: center;
 }
 
 #playAgainBtn:hover:after {
@@ -229,7 +227,6 @@ img:hover {
 }
 
 .scores h2 {
-    margin-bottom: 12px;
     font-size: 2.5rem;
     font-size: clamp(2.5rem, 2.0155038759689923rem + 0.12919896640826875vw, 4rem);
 }
@@ -239,60 +236,50 @@ img:hover {
     font-size: clamp(1.5rem, 1.0155038759689923rem + 0.12919896640826875vw, 3rem);
 }
 
+.scores #firstWins {
+    letter-spacing: 3px;
+    margin-bottom: 12px;
+}
+
 .footer {
     color: #00FF00;
     padding: 10px;
     border-top: 2px solid #00FF00;
-    position: fixed;
-    /* Changed from relative to fixed */
-    bottom: 0;
-    /* Stick to the bottom */
     width: 100%;
     text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00;
-    animation: flicker 0.2s infinite;
     font-size: 1rem;
-    font-size: clamp(1rem, 1.3968992248062015rem + -0.41343669250646vw, 1.3rem);
+    font-size: clamp(1rem, 0.9149214659685864rem + 0.34904013961605584vw, 1.25rem);
+    position: fixed;
+    bottom: 0;
 }
 
 /* Small Devices */
 @media (max-width: 640px) {
     main {
-        margin-bottom: 0;
+        padding-bottom: 43.2px;
+        gap: 0px;
+        min-height: 100dvh;
+        /* More consistent height on mobile */
     }
 
     .title {
-        font-size: 3rem;
-    }
-
-    .choices img {
-        max-width: 120px;
-    }
-
-    .footer {
-        position: initial;
-        /* Changed from relative to fixed */
-        bottom: initial;
-        /* Stick to the bottom */
-    }
-
-
-}
-
-/* Extra Small Devices */
-@media (max-width: 475px) {
-
-
-    .intro {
-        margin: 0 3%;
-
-    }
-
-
-    .choices img {
-        max-width: 110px;
+        font-size: 2.5rem;
     }
 
     #updates {
-        margin: 0 3%;
+        height: 80px;
+    }
+
+    .scores h2 {
+        font-size: 2rem;
+    }
+
+    .scores {
+        font-size: 1.5;
+        margin-bottom: 0px;
+    }
+
+    .choices img {
+        max-width: 100px;
     }
 }
